# nyaa-downloader

./: Cargo.toml  README.md  build.rs
src/: anilist.rs  main.rs  nyaa.rs  uri.rs  utils.rs
src/pages/: menu.rs
