[package]
name = "nyaa-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui  = "0.23.0"
crossterm = "0.27.0"
winreg = "0.51.0"
open = "5.0.0"
reqwest = {version = "0.11.20", features = ["blocking", "json"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde-xml-rs = "0.6.0"

[build-dependencies]
winres = "0.1.12"